--- a/SRC/obstacle_selection/CMakeLists.txt
+++ b/SRC/obstacle_selection/CMakeLists.txt
@@ -8,10 +8,10 @@ add_compile_options(-std=c++11)
 aux_source_directory(. SRC)
 # 添加头文件路径
 include_directories("${PROJECT_SOURCE_DIR}/../common/libs")
-# 添加 math 子目录
+# 添加  子目录
 add_subdirectory("../common" "${CMAKE_CURRENT_BINARY_DIR}/testlib_build")
 
 # 指定生成目标
-add_executable(obstacle_selection ${SRC})
+add_executable(obstacle_selection ${SRC} ${PROTO_SRCS} ${PROTO_HDRS})
 # 添加链接库
-target_link_libraries(obstacle_selection CommonFun)
+target_link_libraries(obstacle_selection common_lib)
