complete socket code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,6 @@
         "memory": "cpp",
         "string": "cpp",
         "csignal": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
