--- a/SRC/.vscode/settings.json
+++ b/SRC/.vscode/settings.json
@@ -53,6 +53,7 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "algorithm": "cpp",
-        "memory": "cpp"
+        "memory": "cpp",
+        "string": "cpp"
     }
 }
